swapped for support doc

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!-- support.html -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Chemical Inventory Scanner Support</title>
+</head>
+<body>
+  <h1>Need Help?</h1>
+  <p>This is the support page for the Chemical Inventory Scanner app.</p>
+  <p>Email us at: <a href="chemicalinventoryscanner@gmail.com">chemicalinventoryscanner@gmail.com</a></p>
+</body>
 </html>
